[Fix] -> Cancel Reply button vertically aligned.

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -5016,6 +5016,7 @@ input[type="color"]::-webkit-color-swatch {
 .ast-comment-list #cancel-comment-reply-link {
   white-space: nowrap;
   margin-right: 1em;
+  margin-top: 0.46em;
   font-size: 13px;
   font-weight: 600;
 }
