--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -44,6 +44,7 @@
     #cancel-comment-reply-link{
         white-space: nowrap;
         margin-left: 1em;
+        margin-top: 0.46em;
         font-size: 13px;
         font-weight: 600;
     }
